[gd_scene load_steps=16 format=3 uid="uid://cguiiqv4fbdb7"]

[ext_resource type="Script" path="res://Player.gd" id="1_6o35k"]
[ext_resource type="AudioStream" uid="uid://bfgob7ukxeb2l" path="res://Audio/SFX - Death Explosion.ogg" id="2_3bf2y"]
[ext_resource type="AudioStream" uid="uid://v50faepjndyx" path="res://Audio/SFX - Success.ogg" id="3_2o5sf"]
[ext_resource type="AudioStream" uid="uid://drnk0lvk4ru16" path="res://Audio/SFX - Main engine thrust.ogg" id="4_nuiih"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://Particles/booster_particles.tscn" id="5_vpyrq"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="6_s6air"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="7_d6463"]
[ext_resource type="Material" uid="uid://lridbnvpwbdn" path="res://Shipvioletmaterial.tres" id="8_tbv3c"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6skqc"]

[sub_resource type="CylinderMesh" id="CylinderMesh_tkdbv"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_41e5t"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_5ojgf"]
radius = 0.2
height = 0.4

[sub_resource type="CylinderMesh" id="CylinderMesh_tpt1q"]
top_radius = 0.2
height = 0.5

[sub_resource type="PrismMesh" id="PrismMesh_yj5qy"]
left_to_right = 0.0
size = Vector3(0.34, 0.415, 0.125)

[sub_resource type="PrismMesh" id="PrismMesh_k32n1"]
left_to_right = 1.0
size = Vector3(0.34, 0.415, 0.125)

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_6o35k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_6skqc")

[node name="Explosionaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3bf2y")

[node name="Successaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2o5sf")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_nuiih")

[node name="BoosterParticles" parent="." instance=ExtResource("5_vpyrq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="LeftBoosterParticles" parent="." instance=ExtResource("5_vpyrq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, -1, 0)

[node name="RightBoosterParticles" parent="." instance=ExtResource("5_vpyrq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, -1, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_s6air")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_d6463")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("CylinderMesh_tkdbv")

[node name="Cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("CylinderMesh_41e5t")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, -0.67, 0)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("SphereMesh_5ojgf")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.67, 0)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("SphereMesh_5ojgf")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.67, 0.3)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("SphereMesh_5ojgf")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.67, -0.3)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("SphereMesh_5ojgf")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.34, 0)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("CylinderMesh_tpt1q")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.354, 0.4, 0)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("PrismMesh_yj5qy")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.354, 0.4, 0)
material_override = ExtResource("8_tbv3c")
mesh = SubResource("PrismMesh_k32n1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
